2008-06-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-note.c (hildon_note_realize):
	* src/hildon-banner.c (hildon_banner_realize):
	Add WM hints for Matchbox

2008-06-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_init, hildon_app_menu_finalize)
	(hildon_app_menu_map, hildon_app_menu_unmap)
	(hildon_app_menu_button_release):
	Remove the grab window, it's not needed anymore

	* src/hildon-program.c
	Fixed typo in documentation

	* src/hildon-app-menu.h
	* src/hildon-app-menu.c
	* examples/hildon-app-menu-example.c
	Remove hildon_app_menu_popup(), use gtk_widget_show() instead

2008-06-09  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-note.c
	Added new transfer_window and close_if_pressed_outside private
	attributes.
	(hildon_note_rebuild):
	Don't add a cancel button to the information note. It will be
	closed when tapping outside
	Remove the comment about the OK button in the documentation
	(hildon_note_realize):
	Set the notification type hint
	(hildon_note_map, hildon_note_unmap, grab_transfer_window_get):
	Grab/ungrab pointer and keyboard if the note has to be closed when
	tapping outside
	(hildon_note_button_release):
	Close the note when tapping outside (if applicable)

	* src/hildon-app-menu.c
	Grab/ungrab pointer and keyboard on map/unmap
	(hildon_app_menu_button_release, hildon_app_menu_class_init):
	Close the menu on button release, not button press

	* src/hildon-banner.c
	(hildon_banner_set_property)
	(hildon_banner_check_position):
	Make the banner use the full width of the screen
	(hildon_banner_show_information)
	(hildon_banner_show_information_with_markup):
	Don't display an icon by default

2008-06-09  Alejandro G. Castro <alex@igalia.com>

	Added fading scrollbars and adapted all the overshooting code to
	horizontal scrolling. We have also fixed bugs with overshooting
	and current fading implementation.
		
	* src/hildon-pannable-area.c